# vero-lite

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: autonomy-triggers.md  settings.json
.claude/agents/: explore-research.md  goal-evaluator.md  plan-drafter.md  status-scribe.md
.claude/commands/: goal.md
.claude/handoffs/: .gitignore  README.md
.claude/hooks/: _goal_gate.py  _goal_state.py  _loop_counter.py  _sonnet_classifier.py  _wsl_bridge.py  notification_telegram.py  posttooluse_progress_observer.py  posttooluse_validate_handoff.py  pretooluse_classifier_dispatch.py  pretooluse_git_deny.py  pretooluse_goal_evaluator_write_deny.py  pretooluse_loop_detect.py  pretooluse_plan_subagent_write_deny.py  pretooluse_research_path_deny.py  pretooluse_status_scribe_write_deny.py  stop_continuation.py  subagentstop_notify.py  userpromptsubmit_next_work_nudge.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_energy_schema.py  0002_procedure_runtime.py  0003_operational_event_measured_kind.py  0004_pipeline_run_step_principals.py  0005_action_identity.py  0006_pipeline_run_version.py  0007_audit_log.py  0008_governance_pin.py  0009_asset_rated_current_a.py  0010_audit_log_service_principal.py  0011_schedule_states.py  0012_person_table.py
benchmarks/: __init__.py
benchmarks/nl_query_feasibility/: RESULTS.md  __init__.py  experiment_prompt_variants.py  gold.yaml  harness.py  run_benchmark.py  run_text_to_sql.py  text_to_sql.py
benchmarks/procedure_baseline/: REPORT.md  __init__.py  grader.py  harness.py  loader.py  run_benchmark.py  schema.py
docs/: CHANGELOG.md  STATUS.md
docs/adr/: 0000-template.md  (+33 more)
ontology/: README.md  core_v0.yaml
scripts/: bootstrap.sh  seed_operate_demo.py
services/: __init__.py
tests/: conftest.py  db_support.py  test_health.py  test_render_transcript.py  test_startup_log.py  test_telegram_isolation.py
tools/: check_archive_size.py  check_status_citations.py  check_status_size.py
verticals/: __init__.py
(+757 files in other folders)
