[project]
name = "vero-lite"
version = "0.1.0"
description = "Palantir-lite data platform for Thai SMB — vertical ontology engine"
authors = [{ name = "Jirachai Thiemsert", email = "16893502+CrayJThiemsert@users.noreply.github.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
  "celery>=5.4.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "structlog>=24.4.0",
  "typer>=0.12.0",
  "ruamel.yaml>=0.18.0",
  "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "detect-secrets>=1.5.0",
  "ipython>=8.27.0",
  "check-jsonschema>=0.29.0",
  "types-jsonschema>=4.23.0",
]

[project.scripts]
vero-lite = "services.engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pycodestyle + pyflakes
  "I",                # isort
  "B",                # bugbear
  "UP",               # pyupgrade
  "RUF",              # ruff-specific
  "C90",              # mccabe complexity
  "N",                # pep8-naming
  "S",                # bandit (security)
]
ignore = [
  "S101",             # asserts ok in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["services"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 70
